--- a/index.css
+++ b/index.css
@@ -17,8 +17,13 @@ body {
 
 .container {
 	margin: auto;
-	padding: 0.8rem;
-	max-width: 1360px;
+	padding: 0 0.8rem;
+	max-width: 1260px;
+}
+
+hr {
+	margin: 0.2em 0;
+	opacity: 0.6;
 }
 
 header {
@@ -36,6 +41,10 @@ nav a {
 	color: #333;
 }
 
+section {
+	padding: 1.8rem 0;
+}
+
 #hero {
 	background-color: #fff;
 }
@@ -48,4 +57,26 @@ nav a {
 }
 #hero h1 {
 	font-size: 2.8em;
+}
+
+#about {
+	background-color: #6c63ff;
+	color: #fff;
+}
+#about p {
+	margin: 0.4rem 0;
+	color: #f5f5f5;
+}
+
+#project-grid {
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	grid-gap: 0.8rem;
+	padding: 1rem 0;
+}
+.card {
+	border: 1px solid #aaa;
+	border-radius: 0.4em;
+	padding: 0.8rem;
+	max-width: 21rem;
 }
