--- a/index.css
+++ b/index.css
@@ -1,123 +1,126 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap');
 
 /* CSS Reset */
+
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html,
 body {
-	font-size: 16px;
-	font-family: 'Exo', sans-serif;
-	color: #333;
-	background-color: #fafafa;
-	scroll-padding: 53px;
+    font-size: 16px;
+    font-family: 'Exo', sans-serif;
+    color: #333;
+    background-color: #fafafa;
+    scroll-padding: 53px;
     scroll-behavior: smooth;
 }
 
 .container {
-	margin: auto;
-	padding: 0 0.8rem;
-	max-width: 1260px;
+    margin: auto;
+    padding: 0 0.8rem;
+    max-width: 1260px;
 }
 
 hr {
-	margin: 0.2em 0;
-	opacity: 0.6;
+    margin: 0.2em 0;
+    opacity: 0.6;
 }
 
 header {
-	position: sticky;
-	top: 0;
-	left: 0;
-	background-color: #fff;
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #fff;
 }
 
 header .container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
 }
 
 nav a {
-	margin-left: 0.8em;
-	text-decoration: none;
-	color: #333;
+    margin-left: 0.8em;
+    text-decoration: none;
+    color: #333;
 }
 
 section {
-	padding: 1.8rem 0;
+    padding: 1.8rem 0;
 }
 
 #hero {
-	background-color: #fff;
+    background-color: #fff;
 }
 
 #hero .container {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-	align-items: center;
-	padding: 1.8rem;
-	height: calc(100vh - 53px);
+    align-items: center;
+    padding: 1.8rem;
+    height: calc(100vh - 53px);
 }
 
 #hero h1 {
-	font-size: 2.8em;
+    font-size: 2.8em;
 }
 
 #about {
-	background-color: #6c63ff;
-	color: #fff;
+    background-color: #6c63ff;
+    color: #fff;
 }
 
 #about p {
-	margin: 0.4rem 0;
-	color: #f5f5f5;
+    margin: 0.4rem 0;
+    color: #f5f5f5;
 }
 
 #project-grid {
-	display: flex;
+    display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
-	padding: 3rem 0;
+    padding: 3rem 0;
 }
 
 .card {
-	border: 1px solid #aaa;
-	border-radius: 0.4em;
-	padding: 0.8rem;
-	max-width: 21rem;
+    border: 1px solid #aaa;
+    border-radius: 0.4em;
+    padding: 0.8rem;
+    max-width: 21rem;
     margin-bottom: 2rem;
 }
 
 .card img {
-	height: 200px;
+    height: 200px;
     width: 100%;
     object-fit: cover;
     border-radius: 5px;
 }
 
 .card .description {
-	margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 footer {
     background-color: #333;
-    padding: 2rem;
+    padding: 2rem 2rem 0 2rem;
 }
 
-#footer{
+#footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.about-me, .quick-links, .contact-me{
+.about-me,
+.quick-links,
+.contact-me {
     color: white;
     max-width: 300px;
     margin-bottom: 2rem;
@@ -133,7 +136,7 @@ footer {
     color: white;
 }
 
-.nav-links a{
+.nav-links a {
     color: white;
     margin-bottom: 0.5rem;
 }
@@ -144,5 +147,32 @@ footer {
     margin-right: 0.6rem;
 }
 
+footer .content-wrapper {
+    width: 100%;
+    background: #333;
+}
 
+footer .content-wrapper .content {
+    max-width: 1250px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.content-wrapper .content span,
+.content-wrapper .content a {
+    font-size: 14px;
+    font-weight: 300;
+    color: #fff;
+    opacity: 0.8;
+    text-decoration: none;
+}
+
+.content-wrapper .content a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+.content-wrapper .content a {
+    margin-right: 10px;
+}
